Bugfixes
- fixed error dialog not showing
- fixed task loading: fixed AssetTasks being serialized as "null": fixed JoinedCollectionView#toArray())
- fixed DataChangeEvent Exceptions on zero changed elements
- fixed admin delete all tasks
- fixed upload / download of files for asset tasks
- fixed admin delete currently visible: fixed DataBase#removeAll(Collection)
- hide wip task pinning buttons

--- a/src/main/frontend/sass/all_template/_dialog.scss
+++ b/src/main/frontend/sass/all_template/_dialog.scss
@@ -59,6 +59,7 @@
 	width:90%;
 	height:90%;
 	padding:20px;
+	z-index: 999;
 }
 #exceptionDialog-heading {
 	color: $fgc-exceptionDialog-heading;
